# orys

./: Cargo.toml  README.md  model.json  model.onnx
python-bindings/: Cargo.toml
python-bindings/src/: lib.rs
src/: errors.rs  graph.rs  lib.rs  ops.rs  tensor.rs
src/loader/: json.rs  mod.rs
